--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
-# azure-pipelines.yml
+# Azure Pipelines YAML
+# https://learn.microsoft.com/en-us/azure/devops/pipelines/yaml/schema
 
 trigger:
   branches:
@@ -9,7 +10,11 @@ pool:
   vmImage: 'ubuntu-latest'  # Or select another image based on your requirements
 
 variables:
-  pythonVersion: '3.9'  # Python version for the virtual environment
+  pythonVersion: '3.9'       # Python version for the virtual environment
+  scriptDirectory: '$(Build.SourcesDirectory)'  # Source directory containing your script
+  pdfDirectory: '$(Build.SourcesDirectory)'  # Adjust path where PDFs reside (within scriptDirectory)
+  signedPdfOutput: 'signed_output.pdf'      # Name of the signed output file
+  artifactName: 'SignedPDFs'  # Name of the artifact to publish
 
 steps:
 - task: UsePythonVersion@0
@@ -18,38 +23,36 @@ steps:
   displayName: 'Set Python Version'
 
 - script: |
-    python -m pip install --upgrade pip
-    pip install virtualenv
+  python -m pip install --upgrade pip
+  pip install virtualenv
   displayName: 'Upgrade pip and install virtualenv'
 
 - script: |
-    virtualenv venv
-    source venv/bin/activate
-    pip install OpenSSL
-    pip install PyPDF2
-    pip install PDFNetPython3
+  virtualenv venv
+  source venv/bin/activate
+  pip install OpenSSL
+  pip install PyPDF2
+  pip install PDFNetPython3
   displayName: 'Setup Virtual Environment and Install Dependencies'
 
 - script: |
-    source venv/bin/activate  # Activate the virtual environment
-    python sign_pdf.py --load  # Run the Python script to load certificates
-  displayName: 'Generate Certificates'
-
-- script: |
-    source venv/bin/activate  # Activate the virtual environment
-    python sign_pdf.py --input_path '$(Build.SourcesDirectory)/path_to_pdf_or_folder' --signatureID 'sig1' --x_coordinate 50 --y_coordinate 200 --output_file '$(Build.ArtifactStagingDirectory)/signed_output.pdf'
+  source venv/bin/activate
+  python $(scriptDirectory)/sign_pdf.py \
+  --input_path $(scriptDirectory)/$(pdfDirectory) \
+  --signatureID 'sig1' --x_coordinate 50 --y_coordinate 200 \
+  --output_file $(scriptDirectory)/$(signedPdfOutput)
   displayName: 'Run PDF Signing Script'
 
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)'  # Source directory to copy from
-    Contents: '**/*.pdf'  # Copy the signed PDFs from the source directory
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'  # Staging directory for artifacts
+    SourceFolder: $(scriptDirectory)/$(pdfDirectory)  # Update source folder based on PDF location
+    Contents: '**/*.pdf'  # Keep this to copy all PDFs from the source directory
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
   displayName: 'Copy Signed PDFs to Artifact Staging Directory'
 
 - task: PublishBuildArtifacts@1
   inputs:
-    pathToPublish: '$(Build.ArtifactStagingDirectory)'  # Path where signed PDFs are copied
-    artifactName: 'SignedPDFs'  # Name of the artifact to publish
-    publishLocation: 'Container'  # Publish location for the artifact
+    pathToPublish: '$(Build.ArtifactStagingDirectory)'
+    artifactName: $(artifactName)-$(Date:yyyyMMdd)  # Customize artifact name with date
+    publishLocation: 'Container'
   displayName: 'Publish Signed PDFs'
